userman2/deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userman2
  namespace: default
  labels:
    app: userman2
  annotations:
    fluxcd.io/automated: 'true'
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: userman2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      name: userman2
      labels:
        app: userman2
    spec:
      containers:
      - name: userman2
        image: ghcr.io/wisvch/userman2:20211129-e47592c
        imagePullPolicy: IfNotPresent
        args:
        - gunicorn
        - --workers=4
        resources:
          requests:
            cpu: 10m
            memory: 200Mi
        volumeMounts:
        - mountPath: /config
          name: userman2-config
          readOnly: true
      - name: oidc-proxy
        image: quay.io/wisvch/oidc-proxy:dev-1553867950
        imagePullPolicy: IfNotPresent
        args:
        - --config
        - /config/config.yml
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
            scheme: HTTP
          failureThreshold: 3
          successThreshold: 1
          timeoutSeconds: 10
          initialDelaySeconds: 10
          periodSeconds: 30
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - mountPath: /config
          name: oidc-proxy-config
          readOnly: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext:
        runAsUser: 999
      imagePullSecrets:
      - name: ghcr.io
      terminationGracePeriodSeconds: 30
      volumes:
      - name: oidc-proxy-config
        secret:
          defaultMode: 420
          secretName: userman2-oidc-proxy-config
      - name: userman2-config
        secret:
          defaultMode: 420
          secretName: userman2-config
