userman2/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: userman2
  name: userman2
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: userman2
  type: ClusterIP
